# Chess

./: Ai.cpp  Ai.h  CMakeLists.txt  Chess.cpp  Chess.h  Figure.cpp  Figure.h  Readme.txt  main.cpp
cmake_modules/: findSFML.cmake
